Fixed overlapping output with input box

--- a/style.css
+++ b/style.css
@@ -53,10 +53,11 @@ header {
     justify-content: center;
 font-size: 1.3rem;
     width: 40%;
-    margin:  30px auto ;
+    margin:  30px auto  ;
     text-align: center;
     line-height: 1.3;
-    
+    padding: 5rem 0;
+
 }
 
 #chat-form {
